test/lowerLoopEarlyReturn5_2.slq

def main(){
	d:=0:ğ”¹;
	n:=1:int[128];
	while measure(nâ‰ 0){
		d:=H(d);
		if d { n-=2; } else { n+=1; }
		if measure(n<-3||n>3){
			forget(n); // error
			return d;
		}
	}
	forget(n); // error
	return d;
}
